--- a/templates/security/_macros.html
+++ b/templates/security/_macros.html
@@ -1,23 +1,14 @@
-{% macro render_field_with_errors(field) %}
- <div class="pure-control-group{%if field.errors %} has-error{% endif %}">
-    <label for="{{field.id}}">{{ field.label }}</label>
-      {{field(**kwargs)|safe}}
-  </div>
-{% endmacro %}
-
-{% macro render_field(field) %}
-{% if field.type != 'HiddenField' %}
- <div class="pure-control-group">
-    <label for="{{field.id}}">{{ field.label }}</label>
-    {{field(**kwargs)|safe}}
-  </div>
-{% else %}
-    {{field(**kwargs)|safe}}
-{% endif %}
+{% macro render_field(field, material_type='textfield') %}
+    {% if field.type != 'HiddenField' %}
+    <div class="mdl-{{ material_type }} mdl-js-{{ material_type }}">
+      {{ field(**kwargs)|safe }}
+      <label for= "{{ field.id }}" class="mdl-{{ material_type }}__label">{{ field.label }}</label>
+    </div>
+    {% else %}
+        {{field(**kwargs)|safe}}
+    {% endif %}
 {% endmacro %}
 
 {% macro render_button(field) %}
-   <div class="pure-controls">
-      {{field(**kwargs)|safe}}
-  </div>
+    {{field(**kwargs)|safe}}
 {% endmacro %}
