--- a/templates/security/_menu.html
+++ b/templates/security/_menu.html
@@ -1,25 +1,24 @@
 {% if security.registerable or security.recoverable or security.confirmabled %}
-
-<nav class="navbar navbar-default" role="navigation">
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-3">
+<footer class="mdl-mini-footer login-footer">
+    <div class="mdl-footer--left-section">
+        <ul class="mdl-mini-footer--link-list">
         {% if not request.path.endswith('login') %}
-            <a class="pure-button pure-button-primary" href="{{ url_for_security('login', **request.args) }}">Login</a>
+            <li><a href="{{ url_for_security('login', **request.args) }}">Login</a></li>
         {% endif %}
-
         {% if not request.path.endswith('register') %}
             {% if security.registerable %}
-            <a class="pure-button button-small" href="{{ url_for_security('register', **request.args) }}">Register</a>
+            <li><a href="{{ url_for_security('register', **request.args) }}">Register</a></li>
             {% endif %}
         {% endif %}
 
         {% if security.recoverable %}
-            <a class="pure-button button-small" href="{{ url_for_security('forgot_password', **request.args) }}">Forgot password</a>
+            <li><a href="{{ url_for_security('forgot_password', **request.args) }}">Forgot password</a></li>
         {% endif %}
 
         {% if security.confirmable %}
-            <a class="pure-button button-small" href="{{ url_for_security('send_confirmation', **request.args) }}">Confirm account</a>
+            <li><a href="{{ url_for_security('send_confirmation', **request.args) }}">Confirm account</a></li>
         {% endif %}
+        </ul>
     </div>
-</nav>
-
+</footer>
 {% endif %}
