--- a/templates/security/forgot_password.html
+++ b/templates/security/forgot_password.html
@@ -1,25 +1,38 @@
-{% from theme("security/_macros.html") import render_field_with_errors, render_field, render_button %}
+{% from theme("security/_macros.html") import render_field, render_button %}
 {% extends theme("base.html") %}
 
 {% block content %}
-<div class="pure-g-r" id="layout">
-    {% include theme('sidebar.html') %}
-    <div class="pure-u-1">
-        <div class="content">
-            <!-- A wrapper for all the blog posts -->
-            <div class="posts">
-              <h1>Send password reset instructions</h1>
-              {% include theme("security/_messages.html") %}
-              <form action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form" class="pure-form pure-form-aligned" role="form">
-                <fieldset>
-                  {{ forgot_password_form.hidden_tag() }}
-                  {{ render_field_with_errors(forgot_password_form.email, class="form-control", placeholder="you@domain.com") }}
-                  {{ render_button(forgot_password_form.submit, class="pure-button pure-button-primary") }}
-                </fieldset>
-              </form>
-              {% include theme("security/_menu.html") %}
+<main>
+    <div class="demo-blog__posts mdl-grid">
+        <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">
+            <div class="mdl-card__media mdl-color-text--grey-50">
+                <h3><img src="{{ theme_static('img/logo.png') }}"/> Admin - Forgot Password</h3>
+            </div>
+            <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
+            {% if forgot_password_form.errors %}
+                {% for field, error in forgot_password_form.errors.items() %}
+                <p class="form-error">{{ error[0] }}</p>
+                {% endfor %}
+            {% endif %}
+            </div>
+            <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
+                <form class="login-user" action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form">
+                    {{ forgot_password_form.hidden_tag() }}
+                    {{ render_field(forgot_password_form.email, class="mdl-textfield__input") }}
+
+                    <br/>
+                    <br/>
+                    {{ render_button(forgot_password_form.submit, class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect") }}
+
+                <br/>
+                <br/>
+                </form>
+            </div>
+            <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
+            {% include theme("security/_menu.html") %}
             </div>
         </div>
     </div>
-</div>
+</main>
+
 {% endblock %}
