removing unused imports

--- a/templates/security/register_user.html
+++ b/templates/security/register_user.html
@@ -1,4 +1,4 @@
-{% from theme("security/_macros.html") import render_field_with_errors, render_field, render_button %}
+{% from theme("security/_macros.html") import render_field, render_button %}
 {% extends theme("base.html") %}
 
 {% block content %}
