--- a/templates/content/default_list.html
+++ b/templates/content/default_list.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-<main>
+<main class="mdl-layout__content">
     <div class="demo-blog__posts mdl-grid">
         <div class="mdl-card something-else mdl-cell mdl-cell--8-col mdl-cell--4-col-desktop">
             <div class="mdl-card__media mdl-color--white mdl-color-text--grey-600">
